Bug 1842170 - attempt to avoid nested event loops at inconvenient times r=win-reviewers,mhowell

If we enter `SpinEventLoopUntil` while certain Windows events are
waiting for resolution, we may enter an unusable state.

Since removing all `SpinEventLoopUntil` instances -- or even the one
causing this problem -- isn't really an option at present, kick the can
down the road by kicking the can down the road [sic].

Differential Revision: https://phabricator.services.mozilla.com/D185969